--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "nanoassert": "^1.1.0",
     "randombytes": "^2.0.3",
-    "sodium-universal": "^2.0.0"
+    "sodium-native": "^3.1.1"
   },
   "scripts": {},
   "repository": {
