--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "nanoassert": "^1.1.0",
     "randombytes": "^2.0.3",
-    "sodium-universal": "^3.0.4"
+    "sodium-javascript": "github:okdistribute/sodium-javascript"
   },
   "scripts": {},
   "repository": {
